samples/_failures_safe/1761624242_45eee3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7b42647.c: In function ‘main’:
./samples/SAFE/__tmp_e7b42647.c:116:21: error: expected expression at end of input
  116 |                     if (
      |                     ^~
./samples/SAFE/__tmp_e7b42647.c:116:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7b42647.c:116:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7b42647.c:116:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7b42647.c:116:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7b42647.c:116:21: error: expected declaration or statement at end of input
